# wg_forge_test_task

./: .gitignore  README.md  pyproject.toml
