[tool.poetry]
name = "wg-forge-test-task"
version = "0.1.0"
description = "Test task for fun"
authors = ["Krushovice <kickstar69@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
